static/plugins/picedit/css/picedit.css
/* ... */
[class^="ico-picedit-"], [class*=" ico-picedit-"] {
	font-family: 'picediticons';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.ico-picedit-infinite-loop:before {
	content: "\e60f";
}
.ico-picedit-arrow-maximise:before {
	content: "\e60e";
}
.ico-picedit-insertpicture:before {
	content: "\e60c";
}
.ico-picedit-clearfont:before {
	content: "\e60d";
}
.ico-picedit-eraser:before {
	content: "\e607";
}
.ico-picedit-close:before {
	content: "\e618";
}
.ico-picedit-pencil:before {
	content: "\e609";
}
.ico-picedit-droplet:before {
	content: "\e61a";
}
.ico-picedit-picture:before {
	content: "\e617";
}
.ico-picedit-camera:before {
	content: "\e608";
}
.ico-picedit-undo:before {
	content: "\e613";
}
.ico-picedit-redo:before {
	content: "\e614";
}
.ico-picedit-bubble:before {
	content: "\e605";
}
.ico-picedit-expand:before {
	content: "\e606";
}
.ico-picedit-cogs:before {
	content: "\e604";
}
.ico-picedit-link:before {
	content: "\e60b";
}
.ico-picedit-brightness:before {
	content: "\e602";
}
.ico-picedit-contrast:before {
	content: "\e603";
}
.ico-picedit-checkmark:before {
	content: "\e610";
}
.ico-picedit-crop:before {
	content: "\e615";
}
.ico-picedit-font:before {
	content: "\e612";
}
.ico-picedit-libreoffice:before {
	content: "\e619";
}
.ico-picedit-clock:before {
	content: "\e601";
}
.ico-picedit-circle-half:before {
	content: "\e600";
}

.picedit_box {
    display: inline-block;
    position: relative;
    border: 1px solid #ddd;
	font-family: "Myriad Pro", Arial, Helvetica, sans-serif;
	font-size: 1rem;
    width: 400px;
    height: 200px;
    color: #aaa;
    margin-top: 30px;
	margin-bottom: 10px;
}
.picedit_canvas_box:hover .picedit_action_btns, .picedit_action_btns.active {
	z-index: 8;
	opacity: 0.6;
}
.picedit_canvas_box.dragging {
	-webkit-box-shadow: inset 0px 0px 6px 0px #555555;
	box-shadow: inset 0px 0px 6px 0px #555555;
}
.picedit_nav_box {
    position: absolute;
    top: -35px;
    right: 0;
    width: 98%;
    padding: 1% 1% 1.5% 1%;
    z-index: 15;
    opacity: 1;

	-webkit-transition: opacity 200ms ease-out;
	-moz-transition: opacity 200ms ease-out;
	-ms-transition: opacity 200ms ease-out;
	-o-transition: opacity 200ms ease-out;
	transition: opacity 200ms ease-out;
}
.picedit_control {
    padding: 0 0.25em;
    cursor: pointer;
    display: inline-block;
    opacity: 1;
    vertical-align: middle;
	-webkit-transition: all 200ms ease-in-out;
	-moz-transition: all 200ms ease-in-out;
	-ms-transition: all 200ms ease-in-out;
	-o-transition: all 200ms ease-in-out;
	transition: all 200ms ease-in-out;
}
.picedit_element.active > .picedit_control, .picedit_control.active {
	opacity: 1;
	text-shadow: 0px 0.3px 0px rgba(255, 255, 255, 0.8), 0 0 0 rgba(107, 107, 107, 0.62), 0px 0.3px 0px #FFF;
	color: transparent;
}
.picedit_gray_gradient {
	background: transparent;
}
.picedit_pos_elements {}
.picedit_nav_elements {
    position: relative;
    width: 100%;
    text-align: right;
    padding: 0.3em 0;
    z-index: 20;
}
.picedit_element {
    display: inline-block;
    cursor: pointer;
}
.picedit_element > .picedit_control {
	font-size: 1.6em;
	position:  relative;
	z-index: 40;
}
.picedit_element > .picedit_control.ico-picedit-arrow-maximise {
}
.picedit_control_menu {
    display: inline-block;
    position: absolute;
    top: 1.3em;
    right: 1%;
    z-index: 30;
    padding-top: 1.3em;
    width: auto;
    opacity: 0;
	-moz-transform: scaleY(0);
	-webkit-transform: scaleY(0);
	-o-transform: scaleY(0);
	-ms-transform: scaleY(0);
	transform: scaleY(0);
	-webkit-transition: all 200ms ease-out;
	-moz-transition: all 200ms ease-out;
	-ms-transition: all 200ms ease-out;
	-o-transition: all 200ms ease-out;
	transition: all 200ms ease-out;
}
.picedit_control_menu label {
    display: inline-block;
    margin: 0 0.5em;
}
.picedit_control_menu label > span {
}
/*.picedit_element:hover .picedit_control_menu, */.picedit_element.active .picedit_control_menu {
    opacity: 1;
	-moz-transform: scaleY(1);
	-webkit-transform: scaleY(1);
	-o-transform: scaleY(1);
	-ms-transform: scaleY(1);
	transform: scaleY(1);
}
.picedit_control_menu_container {
}
.picedit_tooltip {}
.picedit_tooltip.picedit_elm_1:after, .picedit_tooltip.picedit_elm_1:before {
    left: 70%;
}
.picedit_tooltip.picedit_elm_2:after, .picedit_tooltip.picedit_elm_2:before {
    left: 96%;
}
.picedit_tooltip.picedit_elm_3:after, .picedit_tooltip.picedit_elm_3:before {
    left: 12%;
}
.picedit_tooltip {
	position: relative;
	background: #ffffff;
	padding: 9px 4px 7px;
	-webkit-box-shadow: 0em 0em 0.2em 0.1em rgba(95, 95, 95, 0.55);
	box-shadow: 0em 0em 0.2em 0.1em rgba(95, 95, 95, 0.55);
	white-space: nowrap;
}
.picedit_tooltip:after, .picedit_tooltip:before {
	bottom: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.picedit_tooltip:after {
	border-color: rgba(255, 255, 255, 0);
	border-bottom-color: #ffffff;
	border-width: 8px;
	margin-left: -8px;
}
.picedit_tooltip:before {
	border-color: rgba(204, 204, 204, 0);
	border-bottom-color: #cccccc;
	border-width: 9px;
	margin-left: -9px;
}
.picedit_input {
    width: 3em;
}
.picedit_canvas_box {
    width: 100%;
    height: 100%;
    display: block;
	text-align: center;
	position: relative;
}
.picedit_canvas {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: none;
	z-index: 5;
}
.picedit_action_btns .center {
    text-align: center;
    font-size: 0.3em;
    color: #CACACA;
    position: absolute;
    bottom: -0.5em;
    left: 0;
    width: 100%;
    height: auto;
    font-style: italic;
}
.picedit_action_btns .center:hover {
	-webkit-box-shadow: none;
	box-shadow: none;
	text-shadow: none;
}
/* ... */

